--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div class="container h-100">
           <div class="row h-100 align-items-center justify-content-center">
             <div class="col-12 col-lg-8 home-content text-center">
-              <h1 class="home-name">Alex <span>Smith</span></h1>
-              <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Developer</b><b>Designer</b><b>Freelancer</b></span></h4>
+              <h1 class="home-name">Juan <span>De La Fuente</span></h1>
+              <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Developer</b><b>Designer</b><b>Software Engineer</b></span></h4>
             </div><a href="#about-area" data-scroll>
               <div class="home-mouse">
                 <div class="mouse-shape">
@@ -99,25 +99,25 @@
             <div class="col-12 col-lg-7 about-content">
               <div class="content-block">
                 <h2 class="content-subtitle">Who am i?</h2>
-                <h6 class="content-title">I'm Alex Smith, a visual UX/UI Designer and Web Developer</h6>
+                <h6 class="content-title">I'm Juan De La Fuente, a visual UX/UI Designer and Web Developer</h6>
                 <div class="content-description">
-                  <p>I am a freelancer based in the United Kingdom and i have been building noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                  <p>I am a Software Developer based in Florida and I have been building noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
                 </div>
                 <address class="content-info">
                   <div class="row">
                     <div class="col-12 col-md-6 single-info"><span>Name:</span>
-                      <p>Alex Smith</p>
+                      <p>Juan De La Fuente</p>
                     </div>
                     <div class="col-12 col-md-6 single-info"><span>Email:</span>
-                      <p><a href="mailto:daniel@example.com">alex@example.com</a></p>
+                      <p><a href="mailto:daniel@example.com">juandelafuenteuk@gmail.com</a></p>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-12 col-md-6 single-info"><span>Age:</span>
-                      <p>21</p>
+                      <p>30</p>
                     </div>
                     <div class="col-12 col-md-6 single-info"><span>From:</span>
-                      <p>Liverpool, UK</p>
+                      <p>Buenos Aires, Argentina</p>
                     </div>
                   </div>
                 </address><a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a><a class="btn content-work button-main" data-scroll="" href="#portfolio-area" role="button">My Work</a>
@@ -597,13 +597,13 @@
           <div class="row">
             <!-- Contact form-->
             <div class="col-12">
-              <form class="contact-form" id="contact-form" action="php/contact.php">
+              <form name="contact" data-netlify="true" class="contact-form" id="contact-form" action="php/contact.php">
                 <div class="row">
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-name" type="text" name="name" placeholder="Name" required=""></div>
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required=""></div>
                   <div class="col-12 form-group"><input class="form-control" id="contact-subject" type="text" name="subject" placeholder="Subject" required=""></div>
                   <div class="col-12 form-group form-message"><textarea class="form-control" id="contact-message" name="message" placeholder="Message" rows="5" required=""></textarea></div>
-                  <div class="col-12 form-submit"><button class="btn button-main button-scheme" id="contact-submit" type="submit">Send message</button>
+                  <div class="col-12 form-submit"><button class="btn button-main button-scheme" id="contact-submit" type="submit">Send Message</button>
                     <p class="contact-feedback"></p>
                   </div>
                 </div>
@@ -618,23 +618,23 @@
           <div class="row contact-info">
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-map"></i>
-                <p class="info-content"><a href="https://goo.gl/maps/2YAGiugG47VAS17g7" target="_blank">4155, Liverpool, United Kingdom.</a></p>
+                <p class="info-content"><a href="https://goo.gl/maps/2YAGiugG47VAS17g7" target="_blank">Florida, United States</a></p>
               </div>
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-call"></i>
-                <p class="info-content"><a href="tel:+441632967704">+44 1632 967704</a></p>
+                <p class="info-content"><a href="tel:7869019062">786 901 9062</a></p>
               </div>
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-send"></i>
-                <p class="info-content"><a href="mailto:alex@example.com">alex@example.com</a></p>
+                <p class="info-content"><a href="mailto:juandelafuenteuk@gmail.com">juandelafuenteuk@gmail.com</a></p>
               </div>
             </div>
           </div>
           <div class="row mini-footer">
             <div class="social-medias col-12 col-lg-5"><a class="twitter" href="#0"><i class="icon ion-logo-twitter"></i></a><a class="instagram" href="#0"><i class="icon ion-logo-instagram"></i></a><a class="linkedin" href="#0"><i class="icon ion-logo-linkedin"></i></a><a class="youtube" href="#0"><i class="icon ion-logo-youtube"></i></a><a class="github" href="#0"><i class="icon ion-logo-github"></i></a><a class="facebook" href="#0"><i class="icon ion-logo-facebook"></i></a></div>
-            <p class="copyright-notice col-12 col-lg-7">Copyright © 2019 CardX, all rights reserved. Developed by <a href="https://themeforest.net/user/exill" target="_blank">Exill</a>.</p>
+            
           </div>
         </div>
       </footer>
