--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <!-- Title-->
-  <title>CodeX - Personal Portfolio / Resume / CV / vCard Template</title>
+  <title>JD Portfolio</title>
   <!-- Description-->
   <meta name="description" content=" Personal Portfolio / Resume / CV / vCard Template">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -109,7 +109,7 @@
                       <p>Juan De La Fuente</p>
                     </div>
                     <div class="col-12 col-md-6 single-info"><span>Email:</span>
-                      <p><a href="mailto:daniel@example.com">juandelafuenteuk@gmail.com</a></p>
+                      <p><a href="mailto:daniel@example.com">JuanDeLaFuenteUK@gmail.com</a></p>
                     </div>
                   </div>
                   <div class="row">
@@ -628,7 +628,7 @@
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-send"></i>
-                <p class="info-content"><a href="mailto:juandelafuenteuk@gmail.com">juandelafuenteuk@gmail.com</a></p>
+                <p class="info-content"><a href="mailto:juandelafuenteuk@gmail.com">JuanDeLaFuenteUK@gmail.com</a></p>
               </div>
             </div>
           </div>
