--- a/index.html
+++ b/index.html
@@ -500,22 +500,22 @@
           <div class="owl-carousel owl-theme">
             <!-- Single review-->
             <div class="single-review"><i class="icon ion-md-quote review-icon"></i>
-              <p class="review-content">Daniel did an excellent creative job. Quick and professional. Highly recommended, and will definitely work with him again.</p><img class="client-avatar" src="/img/client-1.jpg" alt="Review avatar"><span class="client-name">Maria Wilson</span>
+                                       <p class="review-content">I would highly recommend JD to anyone looking for a skilled and reliable professional. They are always willing to lend a hand, take on new challenges, and work tirelessly to ensure their team's success.</p><img class="client-avatar" src="/img/client-1.jpg" alt="Review avatar"><span class="client-name">Alice Hoffman</span>
             </div><!-- Single review-->
             <div class="single-review"><i class="icon ion-md-quote review-icon"></i>
-              <p class="review-content">Daniel did an excellent creative job. Quick and professional. Highly recommended, and will definitely work with him again.</p><img class="client-avatar" src="/img/client-2.jpg" alt="Review avatar"><span class="client-name">John Santana</span>
+                                       <p class="review-content">As an IT tech, I have worked with many professionals in the field, and I must say that this computer science student is truly outstanding. Their knowledge, skill, and work ethic are all top-notch, and they consistently deliver exceptional results.</p><img class="client-avatar" src="/img/client-2.jpg" alt="Review avatar"><span class="client-name">Erik Robinson</span>
             </div><!-- Single review-->
             <div class="single-review"><i class="icon ion-md-quote review-icon"></i>
-              <p class="review-content">Daniel did an excellent creative job. Quick and professional. Highly recommended, and will definitely work with him again.</p><img class="client-avatar" src="/img/client-3.jpg" alt="Review avatar"><span class="client-name">Julia Sakura</span>
+                                       <p class="review-content">I had the pleasure of working with Juan on a project, and I was thoroughly impressed with their attention to detail and ability to solve complex problems quickly. They are truly an asset to any IT team.</p><img class="client-avatar" src="/img/client-3.jpg" alt="Review avatar"><span class="client-name">Ameera Pearce</span>
             </div><!-- Single review-->
             <div class="single-review"><i class="icon ion-md-quote review-icon"></i>
-              <p class="review-content">Daniel did an excellent creative job. Quick and professional. Highly recommended, and will definitely work with him again.</p><img class="client-avatar" src="/img/client-1.jpg" alt="Review avatar"><span class="client-name">Maria Wilson</span>
+                                       <p class="review-content">Juan De La Fuente is a consummate professional who takes pride in their work and always delivers high-quality results.</p><img class="client-avatar" src="/img/client-1.jpg" alt="Review avatar"><span class="client-name">Aysha Garrett</span>
             </div><!-- Single review-->
             <div class="single-review"><i class="icon ion-md-quote review-icon"></i>
-              <p class="review-content">Daniel did an excellent creative job. Quick and professional. Highly recommended, and will definitely work with him again.</p><img class="client-avatar" src="/img/client-2.jpg" alt="Review avatar"><span class="client-name">John Santana</span>
+                                       <p class="review-content">A true team player who is always willing to lend their expertise to help others succeed. </p><img class="client-avatar" src="/img/client-2.jpg" alt="Review avatar"><span class="client-name">Hugo Myers</span>
             </div><!-- Single review-->
             <div class="single-review"><i class="icon ion-md-quote review-icon"></i>
-              <p class="review-content">Daniel did an excellent creative job. Quick and professional. Highly recommended, and will definitely work with him again.</p><img class="client-avatar" src="/img/client-3.jpg" alt="Review avatar"><span class="client-name">Julia Sakura</span>
+                                       <p class="review-content">If you're looking for a student with both technical expertise and a strong work ethic, look no further. </p><img class="client-avatar" src="/img/client-3.jpg" alt="Review avatar"><span class="client-name">Joshua Haas</span>
             </div>
           </div>
         </div>
