--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="row">
             <div class="col-12">
               <div class="section-heading">
-                <h2 class="section-title">Portfolio</h2>
+                <h2 class="section-title">Portfolio (Under Construction)</h2>
                 <p class="section-description">Showcasing some of my best work</p>
               </div>
             </div>
@@ -218,49 +218,49 @@
             </div>
           </div>
           <!-- Thumbnail list-->
-          <div class="portfolio-grid row">
+          <!--<div class="portfolio-grid row">-->
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-1">
+            <!--<div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-1">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-1.jpg">
                   <div class="item-content">
                     <h6 class="content-title">Label Tag Mockup</h6><span class="content-more">More Info</span>
                   </div>
                 </div>
-              </a></div>
+              </a></div>-->
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-2">
+            <!--<div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-2">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-2.jpg">
                   <div class="item-content">
                     <h6 class="content-title">3D Bag Mockup</h6><span class="content-more">More Info</span>
                   </div>
                 </div>
-              </a></div>
+              </a></div>-->
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-3">
+            <!--<div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-3">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-3.jpg">
                   <div class="item-content">
                     <h6 class="content-title">Modern Bag Design</h6><span class="content-more">More Info</span>
                   </div>
                 </div>
-              </a></div>
+              </a></div>-->
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-4">
+            <!--<div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-4">
                 <div class="portfolio-wrapper mb-lg-0"><img class="img-fluid" alt="Item" src="/img/item-4.jpg">
                   <div class="item-content">
                     <h6 class="content-title">Coffee Cup Design</h6><span class="content-more">More Info</span>
                   </div>
                 </div>
-              </a></div>
+              </a></div>-->
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-5">
+            <!--<div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-5">
                 <div class="portfolio-wrapper mb-0"><img class="img-fluid" alt="Item" src="/img/item-5.jpg">
                   <div class="item-content">
                     <h6 class="content-title">T-Shirt Design</h6><span class="content-more">More Info</span>
                   </div>
                 </div>
-              </a></div>
+              </a></div>-->
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-6">
+            <!--<div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-6">
                 <div class="portfolio-wrapper mb-0"><img class="img-fluid" alt="Item" src="/img/item-6.jpg">
                   <div class="item-content">
                     <h6 class="content-title">Packaging Box Mockup</h6><span class="content-more">More Info</span>
@@ -268,9 +268,9 @@
                 </div>
               </a></div>
           </div>
-        </div>
+        </div>-->
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-1">
+        <!--<div class="lightbox-wrapper" id="item-1">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -303,7 +303,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
         <!-- Single lightbox-->
         <div class="lightbox-wrapper" id="item-2">
