--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a class="nav-link" href="#services-area" data-scroll>Services</a></li>
             <li><a class="nav-link" href="#portfolio-area" data-scroll>Portfolio</a></li>
             <li><a class="nav-link" href="#testimonials-area" data-scroll>Clients</a></li>
-            <li><a class="nav-link" href="#blog-area" data-scroll>Blog</a></li>
+            <!--<li><a class="nav-link" href="#blog-area" data-scroll>Blog</a></li>-->
             <li><a class="nav-link" href="#contact-area" data-scroll>Contact</a></li>
           </ul>
         </div>
@@ -141,43 +141,43 @@
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="single-service"><i class="icon service-icon ion-logo-css3"></i>
-                <h6 class="service-title">Design Trends</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h6 class="service-title">Software Programming</h6>
+                <p class="service-description">C++| Java | C# | Phython</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="single-service"><i class="icon service-icon ion-md-images"></i>
-                <h6 class="service-title">PSD Design</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h6 class="service-title">Web Programming</h6>
+                <p class="service-description">JavaScript | Html/CSS</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="single-service"><i class="icon service-icon ion-logo-ionic"></i>
-                <h6 class="service-title">Customer Support</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h6 class="service-title">Database Programming</h6>
+                <p class="service-description">Postgre | MySQL | SQL | Python</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="single-service mb-lg-0"><i class="icon service-icon ion-logo-wordpress"></i>
-                <h6 class="service-title">Web Development</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h6 class="service-title">Frameworks</h6>
+                <p class="service-description">ASP.NET | React | BootStrap</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="single-service mb-md-0"><i class="icon service-icon ion-md-move"></i>
-                <h6 class="service-title">Fully Responsive</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h6 class="service-title">Version Control Software</h6>
+                <p class="service-description">git | TeamForge | TortoiseCVS</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="single-service mb-0"><i class="icon service-icon ion-ios-rocket"></i>
-                <h6 class="service-title">Branding</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h6 class="service-title">IDEs</h6>
+                <p class="service-description">Visual Studio | Android Studio | Arduino | Code::Blocks | IDLE</p>
               </div>
             </div>
           </div>
@@ -493,7 +493,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">Testimonials</h2>
-                <p class="section-description">What my clients think about me</p>
+                <p class="section-description">What my clients/co-workers/supervisors/professors think about me</p>
               </div>
             </div>
           </div>
