--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12 col-md-6 single-info"><span>Age:</span>
-                      <p>30</p>
+                    <!--<div class="col-12 col-md-6 single-info"><span>Age:</span>
+                      <p>30</p>-->
                     </div>
                     <div class="col-12 col-md-6 single-info"><span>From:</span>
                       <p>Buenos Aires, Argentina</p>
@@ -202,7 +202,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">Portfolio (Under Construction)</h2>
-                <p class="section-description">Showcasing some of my best work</p>
+                <p class="section-description">For the meantime you can find my work here: https://github.com/Juan-Fuente</p>
               </div>
             </div>
           </div>
@@ -211,9 +211,9 @@
             <div class="col-12">
               <ul class="list-inline filter-control" role="group" aria-label="Filter Control">
                 <li class="list-inline-item tab-active" data-filter="*">All</li>
-                <li class="list-inline-item" data-filter=".brand">Brand</li>
-                <li class="list-inline-item" data-filter=".design">Design</li>
-                <li class="list-inline-item" data-filter=".photos">Photos</li>
+                <li class="list-inline-item" data-filter=".brand">C++</li>
+                <li class="list-inline-item" data-filter=".design">C#</li>
+                <li class="list-inline-item" data-filter=".photos">Java</li>
               </ul>
             </div>
           </div>
