--- a/index.html
+++ b/index.html
@@ -218,59 +218,59 @@
             </div>
           </div>
           <!-- Thumbnail list-->
-          <!--<div class="portfolio-grid row">-->
+          <div class="portfolio-grid row">
             <!-- Single item-->
-            <!--<div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-1">
+            <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-1">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-1.jpg">
                   <div class="item-content">
-                    <h6 class="content-title">Label Tag Mockup</h6><span class="content-more">More Info</span>
+                    <h6 class="content-title">Conway's Game of Life</h6><span class="content-more">Created a user-friendly interface for simulating the evolution of a population of cells in C++.</span>
                   </div>
                 </div>
-              </a></div>-->
-            <!-- Single item-->
-            <!--<div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-2">
+              </a></div>
+             <!--Single item-->
+            <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-2">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-2.jpg">
                   <div class="item-content">
-                    <h6 class="content-title">3D Bag Mockup</h6><span class="content-more">More Info</span>
+                    <h6 class="content-title">Habit Tracker App</h6><span class="content-more">Implemented features such as a custom calendar, habit logging, progress tracking, and reminders using Java.</span>
                   </div>
                 </div>
-              </a></div>-->
-            <!-- Single item-->
-            <!--<div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-3">
+              </a></div>
+             <!--Single item-->
+            <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-3">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-3.jpg">
                   <div class="item-content">
-                    <h6 class="content-title">Modern Bag Design</h6><span class="content-more">More Info</span>
+                      <h6 class="content-title">Blackjack Game</h6><span class="content-more">Developed a Blackjack game using C# that runs on the command console.</span>
                   </div>
                 </div>
-              </a></div>-->
-            <!-- Single item-->
-            <!--<div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-4">
+              </a></div>
+             <!--Single item-->
+            <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-4">
                 <div class="portfolio-wrapper mb-lg-0"><img class="img-fluid" alt="Item" src="/img/item-4.jpg">
                   <div class="item-content">
-                    <h6 class="content-title">Coffee Cup Design</h6><span class="content-more">More Info</span>
+                    <h6 class="content-title">Brick Breaker Game</h6><span class="content-more">Developed a Brick Breaker game using C++ that runs on the command console.</span>
                   </div>
                 </div>
-              </a></div>-->
-            <!-- Single item-->
-            <!--<div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-5">
+              </a></div>
+             <!--Single item-->
+            <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-5">
                 <div class="portfolio-wrapper mb-0"><img class="img-fluid" alt="Item" src="/img/item-5.jpg">
                   <div class="item-content">
-                    <h6 class="content-title">T-Shirt Design</h6><span class="content-more">More Info</span>
+                      <h6 class="content-title">Calculator</h6><span class="content-more">Developed a Calculator using C++ that runs on the console.</span>
                   </div>
                 </div>
-              </a></div>-->
-            <!-- Single item-->
-            <!--<div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-6">
+              </a></div>
+             <!--Single item-->
+            <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-6">
                 <div class="portfolio-wrapper mb-0"><img class="img-fluid" alt="Item" src="/img/item-6.jpg">
                   <div class="item-content">
-                    <h6 class="content-title">Packaging Box Mockup</h6><span class="content-more">More Info</span>
+                    <h6 class="content-title">Minesweeper Game</h6><span class="content-more">Developed a Minesweeper game using C++ that runs on the command console.</span>
                   </div>
                 </div>
               </a></div>
           </div>
-        </div>-->
-        <!-- Single lightbox-->
-        <!--<div class="lightbox-wrapper" id="item-1">
+        </div>
+         <!--Single lightbox-->
+        <div class="lightbox-wrapper" id="item-1">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -303,7 +303,7 @@
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
         </div>
         <!-- Single lightbox-->
         <div class="lightbox-wrapper" id="item-2">
