--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">Portfolio (Under Construction)</h2>
-                <p class="section-description">For the meantime you can find my work here: https://github.com/Juan-Fuente</p>
+                <p class="section-description">You can find more information about each project here: https://github.com/Juan-Fuente</p>
               </div>
             </div>
           </div>
@@ -220,7 +220,7 @@
           <!-- Thumbnail list-->
           <div class="portfolio-grid row">
             <!-- Single item-->
-            <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="#item-1">
+            <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-1">
                 <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="/img/item-1.jpg">
                   <div class="item-content">
                     <h6 class="content-title">Conway's Game of Life</h6><span class="content-more">Created a user-friendly interface for simulating the evolution of a population of cells in C++.</span>
@@ -260,7 +260,7 @@
                 </div>
               </a></div>
              <!--Single item-->
-            <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="#item-6">
+            <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="#item-6">
                 <div class="portfolio-wrapper mb-0"><img class="img-fluid" alt="Item" src="/img/item-6.jpg">
                   <div class="item-content">
                     <h6 class="content-title">Minesweeper Game</h6><span class="content-more">Developed a Minesweeper game using C++ that runs on the command console.</span>
@@ -270,7 +270,7 @@
           </div>
         </div>
          <!--Single lightbox-->
-        <div class="lightbox-wrapper" id="item-1">
+        <!--<div class="lightbox-wrapper" id="item-1">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -304,9 +304,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-2">
+        <!--<div class="lightbox-wrapper" id="item-2">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -340,9 +340,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-3">
+        <!--<div class="lightbox-wrapper" id="item-3">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -376,9 +376,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-4">
+        <!--<div class="lightbox-wrapper" id="item-4">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -412,9 +412,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-5">
+        <!--<div class="lightbox-wrapper" id="item-5">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -448,9 +448,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-6">
+        <!--<div class="lightbox-wrapper" id="item-6">
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
           </div>
@@ -484,7 +484,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
       </section>
       <!-- Testimonials-->
       <section class="single-section testimonials-area alt-bg" id="testimonials-area">
