--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li><a class="nav-link" href="#about-area" data-scroll>About</a></li>
             <li><a class="nav-link" href="#services-area" data-scroll>Services</a></li>
             <li><a class="nav-link" href="#portfolio-area" data-scroll>Portfolio</a></li>
-            <li><a class="nav-link" href="#testimonials-area" data-scroll>Clients</a></li>
+            <!--<li><a class="nav-link" href="#testimonials-area" data-scroll>Clients</a></li>-->
             <!--<li><a class="nav-link" href="#blog-area" data-scroll>Blog</a></li>-->
             <li><a class="nav-link" href="#contact-area" data-scroll>Contact</a></li>
           </ul>
@@ -113,14 +113,14 @@
                     </div>
                   </div>
                   <div class="row">
+                      <div class="col-12 col-md-6 single-info"><span>From:</span>
+                        <p>Buenos Aires, Argentina</p>
+                  </div>
                     <!--<div class="col-12 col-md-6 single-info"><span>Age:</span>
                       <p>30</p>-->
                     </div>
-                    <div class="col-12 col-md-6 single-info"><span>From:</span>
-                      <p>Buenos Aires, Argentina</p>
-                    </div>
                   </div>
-                </address><a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a><a class="btn content-work button-main" data-scroll="" href="#portfolio-area" role="button">My Work</a>
+                </address><a class="btn content-download button-main button-scheme" href="https://drive.google.com/uc?export=download&id=1E94vtzw_epO4DU_LhGwYyPenFrWtVANGm4W8NqrKKkI" role="button">Download CV</a><a class="btn content-work button-main" data-scroll="" href="#portfolio-area" role="button">My Work</a>
               </div>
             </div>
           </div>
