--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <div class="col-12 col-lg-7 about-content">
               <div class="content-block">
                 <h2 class="content-subtitle">Who am i?</h2>
-                <h6 class="content-title">I'm Juan De La Fuente, a visual UX/UI Designer and Web Developer</h6>
+                <h6 class="content-title">I'm Software Engineer and Cybersecurity enthusiast</h6>
                 <div class="content-description">
-                  <p>I am a Software Developer based in Florida and I have been building noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                    <p>Motivated and skilled computer science student with a passion for software development and website creation. Strong problem-solving and analytical skills, with a keen eye for detail and a commitment to delivering high-quality work. Seeking opportunities to apply my skills and knowledge in a dynamic and challenging environment.</p>
                 </div>
                 <address class="content-info">
                   <div class="row">
@@ -120,7 +120,7 @@
                       <p>30</p>-->
                     </div>
                   </div>
-                </address><a class="btn content-download button-main button-scheme" href="https://drive.google.com/uc?export=download&id=1E94vtzw_epO4DU_LhGwYyPenFrWtVANGm4W8NqrKKkI" role="button">Download CV</a><a class="btn content-work button-main" data-scroll="" href="#portfolio-area" role="button">My Work</a>
+                </address><a class="btn content-download button-main button-scheme" href="https://docs.google.com/document/d/1E94vtzw_epO4DU_LhGwYyPenFrWtVANGm4W8NqrKKkI/edit?usp=sharing" role="button">Download CV</a><a class="btn content-work button-main" data-scroll="" href="#portfolio-area" role="button">My Work</a>
               </div>
             </div>
           </div>
