--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="col-12 col-lg-7 about-content">
               <div class="content-block">
                 <h2 class="content-subtitle">Who am i?</h2>
-                <h6 class="content-title">I'm Software Engineer and Cybersecurity enthusiast</h6>
+                <h6 class="content-title">I'm a Software Engineer and a Cybersecurity enthusiast</h6>
                 <div class="content-description">
                     <p>Motivated and skilled computer science student with a passion for software development and website creation. Strong problem-solving and analytical skills, with a keen eye for detail and a commitment to delivering high-quality work. Seeking opportunities to apply my skills and knowledge in a dynamic and challenging environment.</p>
                 </div>
