--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <!-- Content part-->
             <div class="col-12 col-lg-7 about-content">
               <div class="content-block">
-                <h2 class="content-subtitle">Who am i?</h2>
-                <h6 class="content-title">I'm a Software Engineer and a Cybersecurity enthusiast</h6>
+                <h2 class="content-subtitle">Who am I?</h2>
+                <h6 class="content-title">I'm a Software Engineer and a Cybersecurity enthusiast based in Florida, USA.</h6>
                 <div class="content-description">
                     <p>Motivated and skilled computer science student with a passion for software development and website creation. Strong problem-solving and analytical skills, with a keen eye for detail and a commitment to delivering high-quality work. Seeking opportunities to apply my skills and knowledge in a dynamic and challenging environment.</p>
                 </div>
@@ -114,7 +114,7 @@
                   </div>
                   <div class="row">
                       <div class="col-12 col-md-6 single-info"><span>From:</span>
-                        <p>Buenos Aires, Argentina</p>
+                        <p> Buenos Aires, Argentina</p>
                   </div>
                     <!--<div class="col-12 col-md-6 single-info"><span>Age:</span>
                       <p>30</p>-->
@@ -133,7 +133,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">My Services</h2>
-                <p class="section-description">Services i offer to my clients</p>
+                <p class="section-description">Some of the skills I can offer.</p>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
           <div class="row row-custom">
             <div class="col-12 col-md-8 content-part">
               <h1 class="hire-title">Let's work together!</h1>
-              <p class="hire-description">I am available for freelance projects. Hire me and get your project done.</p>
+              <p class="hire-description">I am available for work. Hire me and get your project done.</p>
             </div>
             <div class="col-12 col-md-4 button-part"><a class="btn hire-btn button-main button-scheme" data-scroll="" href="#contact-area" role="button">Hire me</a></div>
           </div>
@@ -201,8 +201,8 @@
           <div class="row">
             <div class="col-12">
               <div class="section-heading">
-                <h2 class="section-title">Portfolio (Under Construction)</h2>
-                <p class="section-description">You can find more information about each project here: https://github.com/Juan-Fuente</p>
+                <h2 class="section-title">Projects</h2>
+                <p class="section-description">You can find more information about each project on my <a href="https://github.com/Juan-Fuente">GitHub.</a></p>
               </div>
             </div>
           </div>
@@ -493,7 +493,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">Testimonials</h2>
-                <p class="section-description">What my clients/co-workers/supervisors/professors think about me</p>
+                <p class="section-description">What my clients, co-workers, supervisors and professors think about me:</p>
               </div>
             </div>
           </div>
@@ -590,7 +590,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">Get in Touch</h2>
-                <p class="section-description">Feel free to contact me anytime</p>
+                <p class="section-description">Feel free to contact me.</p>
               </div>
             </div>
           </div>
