--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="col-12">
               <div class="section-heading">
                 <h2 class="section-title">About me</h2>
-                <p class="section-description">Get to know me</p>
+                <!--<p class="section-description">Get to know me</p>-->
               </div>
             </div>
           </div>
